SendEmail, update to Utils and introducing Reporting mechanism.